cache policy, collectionview section

--- a/mvvm-image/Podfile
+++ b/mvvm-image/Podfile
@@ -10,6 +10,7 @@ target 'mvvm-image' do
   pod 'Alamofire', '~> 4.5'
   pod 'RxSwift',    '~> 4.0'
   pod 'RxCocoa',    '~> 4.0'
+  pod 'RxDataSources'
 
   target 'mvvm-imageTests' do
     inherit! :search_paths
