--- a/mvvm-image/Podfile
+++ b/mvvm-image/Podfile
@@ -11,6 +11,7 @@ target 'mvvm-image' do
   pod 'RxSwift',    '~> 4.0'
   pod 'RxCocoa',    '~> 4.0'
   pod 'RxDataSources'
+  pod 'SDWebImage/GIF'
 
   target 'mvvm-imageTests' do
     inherit! :search_paths
